--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/koreanmfers1/testmintt",
   "name": "gacha_nft_machine",
   "version": "0.1.0",
   "private": true,
@@ -31,6 +32,7 @@
     "file-loader": "^6.2.0",
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "ipfs-api": "^26.1.2",
@@ -68,6 +70,8 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -155,7 +159,6 @@
     "babel-loader": "^8.2.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
-    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
